removed error on L0

--- a/leccion_0/Lección 0 - Introducción.ipynb
+++ b/leccion_0/Lección 0 - Introducción.ipynb
@@ -459,32 +459,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ingrese su nombre: Denis\n",
-      "Ingrese su edad: 32\n",
-      "Ingrese su profesión: Programador\n",
-      "\n",
-      "Nombre     Denis\n",
-      "Edad:      32\n",
-      "Profesión: Programador\n",
-      "\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
+    "```python\n",
     "#!/usr/bin/python3\n",
     "\n",
     "nombre = input(\"Ingrese su nombre: \")\n",
@@ -495,7 +473,8 @@
     "Nombre     {}\n",
     "Edad:      {}\n",
     "Profesión: {}\n",
-    "\"\"\".format(nombre, edad, profesion))"
+    "\"\"\".format(nombre, edad, profesion))\n",
+    "```"
    ]
   },
   {
