fixed typos in L0

--- a/leccion_0/Lección 0 - Introducción.ipynb
+++ b/leccion_0/Lección 0 - Introducción.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "A lo largo de este curso aprenderán a utilizar el versátil y poderoso lenguaje de programación Python: su sintaxis, utilidades, modos de operación, entre otros.\n",
     "\n",
-    "En esta lección introductioria, veremos:\n",
+    "En esta lección introductoria, veremos:\n",
+    "\n",
     "- [¿Qué es Python?](#what-is-python)\n",
     "- [¿Qué puedo lograr con Python?](#what-can-i-do-with-python)\n",
     "- [Instalación](#python-installation)\n",
@@ -28,7 +29,7 @@
     "\n",
     "Python es usado para un sinnúmero de aplicaciones. Debajo solo algunas menciones que les serán familiares:\n",
     "\n",
-    "* Youtube estuvo en un momento, escrito mayormente en python.\n",
+    "* Youtube, estuvo en un momento, escrito mayormente en python.\n",
     "* Dropbox, la compañía de almacenaje en la nube, esta hecho con python.\n",
     "* EVE Online, un juego en línea, multijugador, esta escrito en una versión modificada de python.\n",
     "* En la industria de cine, Industrial Light & Magic, Pixar, Dreamworks, todos usan python en alguna parte de su proceso de producción.\n",
@@ -110,7 +111,7 @@
    "source": [
     "## Interfaces de usuario\n",
     "\n",
-    "La librería estándar de Python cuenta con una librería de interfaz de usuario, llamada `tkinter`, que a su vez no es más que un interfaz con una extensa libreria llamada <a rel=\"noopener noreferrer\" target=\"_blakn\" href=\"https://www.tcl.tk/\">`TK`</a>.\n",
+    "La librería estándar de Python cuenta con una librería de interfaz de usuario, llamada `tkinter`, que a su vez no es más que un interfaz con una extensa librería llamada <a rel=\"noopener noreferrer\" target=\"_blakn\" href=\"https://www.tcl.tk/\">`TK`</a>.\n",
     "\n",
     "Tkinter corre sin importar el sistema operativo, ya que el mismo no es más que un iterfaz a utilidades nativas.\n",
     "\n",
@@ -418,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En el ejemplo anterior, usamos la funcion nativa `input` para capturar texto del usuario. Esta función guarda su resultado en la variable `respuesta` que creamos a la izquierda.\n",
+    "En el ejemplo anterior, usamos la función nativa `input` para capturar texto del usuario. Esta función guarda su resultado en la variable `respuesta` que creamos a la izquierda.\n",
     "\n",
     "Una variable, al igual que en matemáticas, es objeto cuyo valor puede ser cualquier cosa. En este caso, es el `string` que uno le escribe como respuesta al programa.\n",
     "\n",
@@ -453,7 +454,7 @@
    "source": [
     "# Scripts<a name=\"scripts\"></a>\n",
     "\n",
-    "Lo que se llama un \"script\" no es mas que una serie de instrucciones en secuencia, las cuales serán ejecutadas por `python` al llamar el archivo.\n",
+    "Lo que se llama un \"script\" no es más que una serie de instrucciones en secuencia, las cuales serán ejecutadas por `python` al llamar el archivo.\n",
     "\n",
     "Abra su editor favorito, cree un archivo nuevo llamado `tarjeta.py` e ingrese el código siguiente:"
    ]
@@ -516,7 +517,7 @@
     "\n",
     "Las líneas 7-11 ejecutan un comando de impresión y formato. En `python`, los `str`ings representan cadenas de caracteres: texto, en español. Un string en `python` se puede ingresar entre comillas simples `'texto'`, comillas dobles `\"texto\"`. Se puedes usar comillas triples (`\"\"\"texto\"\"\"` o `'''texto'''`) para escribir `str`ings de múltiples líneas.\n",
     "\n",
-    "Las llaves (`{}`) le indican al método `format` donde colocar sus argumentos, y usan lo que se conoce como interpoación para popular la \"plantilla\"."
+    "Las llaves (`{}`) le indican al método `format` donde colocar sus argumentos, y usan lo que se conoce como interpolación para popular la \"plantilla\"."
    ]
   }
  ],
